Finished Parts List Beta

--- a/linkage.rc
+++ b/linkage.rc
@@ -482,21 +482,22 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Export Image Settings"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_PREVIEW,"Static",SS_BLACKRECT,7,7,713,401
-    LTEXT           "Resolution:",IDC_STATIC,26,420,37,8
-    CONTROL         "1920x1200",IDC_RADIO1,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,70,418,49,13
-    CONTROL         "960x600",IDC_RADIO3,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,125,418,42,13
-    CONTROL         "640x400",IDC_RADIO2,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,173,418,44,13
-    CONTROL         "100x100",IDC_RADIO7,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,222,418,44,13
-    LTEXT           "Scale Factor:",IDC_STATIC,295,420,43,8
-    EDITTEXT        IDC_EDIT1,345,418,49,13,ES_AUTOHSCROLL
-    CONTROL         "",IDC_SPIN1,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,384,417,11,14
-    LTEXT           "Margin:",IDC_STATIC,418,420,25,8
-    EDITTEXT        IDC_EDIT7,449,418,49,13,ES_AUTOHSCROLL
-    CONTROL         "",IDC_SPIN2,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,494,417,11,14
-    DEFPUSHBUTTON   "Save",IDOK,584,417,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,639,417,50,14
-    PUSHBUTTON      "Copy",IDC_BUTTON1,528,417,50,14
+    LTEXT           "Resolution:",IDC_STATIC,18,420,37,8
+    CONTROL         "1920x1200",IDC_RADIO1,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,62,418,49,13
+    CONTROL         "960x600",IDC_RADIO3,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,117,418,42,13
+    CONTROL         "640x400",IDC_RADIO2,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,165,418,44,13
+    CONTROL         "400x640",IDC_RADIO7,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,213,418,44,13
+    CONTROL         "100x100",IDC_RADIO9,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,261,418,41,13
+    LTEXT           "Scale Factor:",IDC_STATIC,322,420,43,8
+    EDITTEXT        IDC_EDIT1,367,418,49,13,ES_AUTOHSCROLL
+    CONTROL         "",IDC_SPIN1,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,403,417,11,14
+    LTEXT           "Margin:",IDC_STATIC,435,420,25,8
+    EDITTEXT        IDC_EDIT7,463,418,49,13,ES_AUTOHSCROLL
+    CONTROL         "",IDC_SPIN2,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,499,417,11,14
+    PUSHBUTTON      "Copy",IDC_BUTTON1,536,417,50,14
+    DEFPUSHBUTTON   "Save",IDOK,592,417,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,647,417,50,14
+    CONTROL         "",IDC_PREVIEW,"Static",SS_BLACKRECT,14,7,713,401
 END
 
 
@@ -506,8 +507,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 3,1,9,0
- PRODUCTVERSION 3,1,9,0
+ FILEVERSION 3,2,0,0
+ PRODUCTVERSION 3,2,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -523,12 +524,12 @@ BEGIN
         BLOCK "080004e4"
         BEGIN
             VALUE "FileDescription", "linkage Application"
-            VALUE "FileVersion", "3.1.9.0"
+            VALUE "FileVersion", "3.2.0.0"
             VALUE "InternalName", "Linkage"
             VALUE "LegalCopyright", "Copyright © 2002 - 2016 David Rector"
             VALUE "OriginalFilename", "Linkage.exe"
-            VALUE "ProductName", "linkage Application"
-            VALUE "ProductVersion", "3.1.9.0"
+            VALUE "ProductName", "Linkage Application"
+            VALUE "ProductVersion", "3.2.0.0"
         END
     END
     BLOCK "VarFileInfo"
@@ -635,6 +636,11 @@ END
 //
 
 IDD_LINK_PROPERTIES AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_EXPORTIMAGE AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
