Added a Help tab to the tool bar to make the help stuff more obvious.

--- a/linkage.rc
+++ b/linkage.rc
@@ -347,28 +347,28 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,192,54,50,14
 END
 
-IDD_LINK_PROPERTIES DIALOGEX 0, 0, 245, 217
+IDD_LINK_PROPERTIES DIALOGEX 0, 0, 252, 216
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Link Properties"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LTEXT           "Name:",IDC_NAMEPROMPT,51,18,22,8
-    EDITTEXT        IDC_EDIT3,76,16,117,12,ES_AUTOHSCROLL
-    CONTROL         "Actuator of CPM:",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,51,38,67,10
-    EDITTEXT        IDC_EDIT2,140,37,53,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT3,76,16,121,12,ES_AUTOHSCROLL
+    CONTROL         "Linear Actuator of CPM:",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,51,38,87,10
+    EDITTEXT        IDC_EDIT2,144,37,53,12,ES_AUTOHSCROLL
     LTEXT           "Throw Distance:",IDC_THROWDISTANCEPROMPT,51,51,53,8
-    EDITTEXT        IDC_EDIT5,140,50,53,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT5,144,50,53,12,ES_AUTOHSCROLL
     CONTROL         "Always Manual Operation",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,51,64,97,10
     LTEXT           "Line Size:",IDC_RPMPROMPT,51,85,31,8
-    EDITTEXT        IDC_EDIT1,140,83,53,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT1,144,83,53,12,ES_AUTOHSCROLL
     CONTROL         "",IDC_SPIN1,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,197,83,11,14
     CONTROL         "Solid",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,51,98,32,10
-    DEFPUSHBUTTON   "OK",IDOK,49,198,66,14
-    PUSHBUTTON      "Cancel",IDCANCEL,128,198,66,14
+    DEFPUSHBUTTON   "OK",IDOK,50,198,66,14
+    PUSHBUTTON      "Cancel",IDCANCEL,133,198,65,14
     CONTROL         "Gear",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,51,147,31,10
     LTEXT           "Fastened to Link",IDC_FASTENEDTO,51,171,139,8
     LTEXT           "Color:",IDC_COLORPROMPT,52,112,20,8
-    CONTROL         "",IDC_COLOR,"Static",SS_GRAYRECT | SS_NOTIFY,139,109,53,13
+    CONTROL         "",IDC_COLOR,"Static",SS_GRAYRECT | SS_NOTIFY,143,109,53,13
     CONTROL         "Locked",IDC_LOCKED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,51,131,38,10
 END
 
@@ -565,9 +565,9 @@ BEGIN
     IDD_LINK_PROPERTIES, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 234
+        RIGHTMARGIN, 241
         TOPMARGIN, 7
-        BOTTOMMARGIN, 210
+        BOTTOMMARGIN, 209
     END
 
     IDD_ABOUT, DIALOG
@@ -717,6 +717,9 @@ BEGIN
     ID_SIMULATE_BACKWARD    "Step the simulation backwards 0.033 (1/30) seconds.\nStep Backward"
     ID_EDIT_SET_RATIO       "Set the gear or chain/pulley ratio.\nSet Ratio"
     IDS_RIBBON_SET_RATIO    "Set Ratio"
+    IDS_RIBBON_HELPCAT      "&Help"
+    IDS_RIBBON_HELPABOUT    "About Linkage\nShow version and copyright information for this program."
+    IDS_RIBBON_HELPDOC      "User's Guide\nOpen the PDF user's guide document."
 END
 
 STRINGTABLE
