--- a/linkage.rc
+++ b/linkage.rc
@@ -311,32 +311,32 @@ END
 // Dialog
 //
 
-IDD_CONNECTOR_PROPERTIES DIALOGEX 0, 0, 245, 247
+IDD_CONNECTOR_PROPERTIES DIALOGEX 0, 0, 246, 235
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Connector Properties"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LTEXT           "Name:",IDC_NAMEPROMPT,51,18,22,8
-    EDITTEXT        IDC_EDIT3,76,16,117,12,ES_AUTOHSCROLL
-    CONTROL         "Connector",IDC_RADIO1,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,51,38,49,10
-    CONTROL         "Anchor",IDC_RADIO3,"Button",BS_AUTORADIOBUTTON,51,72,39,10
-    CONTROL         "Rotating Anchor of RPM:",IDC_RADIO5,"Button",BS_AUTORADIOBUTTON,51,93,95,10
-    EDITTEXT        IDC_EDIT1,151,92,42,12,ES_AUTOHSCROLL
-    CONTROL         "Always Manual Operation",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,67,106,97,10
-    CONTROL         "Draw Motion Path",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,67,51,73,10
-    LTEXT           "Coordinates:",IDC_STATIC,51,179,42,8
-    EDITTEXT        IDC_EDIT2,96,177,43,12,ES_AUTOHSCROLL
-    LTEXT           ",",IDC_STATIC,142,179,8,8
-    EDITTEXT        IDC_EDIT4,150,177,43,12,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,48,227,66,14
-    PUSHBUTTON      "Cancel",IDCANCEL,130,227,66,14
-    EDITTEXT        IDC_EDIT7,151,126,42,12,ES_AUTOHSCROLL
-    CONTROL         "Slide Path Radius:",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,51,128,73,10
-    LTEXT           "Slide Path Minimum Radius:",IDC_SLIDERADIUSMINPROMPT,51,140,91,8
-    LTEXT           "Static",IDC_SLIDRADIUSMINVALUE,155,141,33,8
-    LTEXT           "Fastened to Link",IDC_FASTENEDTO,51,200,139,8
-    LTEXT           "Color:",IDC_STATIC,51,159,20,8
-    CONTROL         "",IDC_COLOR,"Static",SS_GRAYRECT | SS_NOTIFY,139,156,53,13
+    LTEXT           "Name:",IDC_NAMEPROMPT,45,18,22,8
+    EDITTEXT        IDC_EDIT3,70,16,128,12,ES_AUTOHSCROLL
+    CONTROL         "Connector",IDC_RADIO1,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,45,38,49,10
+    CONTROL         "Anchor",IDC_RADIO3,"Button",BS_AUTORADIOBUTTON,45,59,39,10
+    CONTROL         "Rotating Input Anchor of RPM:",IDC_RADIO5,"Button",BS_AUTORADIOBUTTON,45,80,109,10
+    EDITTEXT        IDC_EDIT1,157,79,42,12,ES_AUTOHSCROLL
+    CONTROL         "Always Manual Operation",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,61,93,97,10
+    CONTROL         "Draw Motion Path",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,133,38,73,10
+    LTEXT           "Coordinates:",IDC_STATIC,45,166,42,8
+    EDITTEXT        IDC_EDIT2,102,164,43,12,ES_AUTOHSCROLL
+    LTEXT           ",",IDC_STATIC,148,166,8,8
+    EDITTEXT        IDC_EDIT4,156,164,43,12,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,49,216,66,14
+    PUSHBUTTON      "Cancel",IDCANCEL,131,216,66,14
+    EDITTEXT        IDC_EDIT7,157,113,42,12,ES_AUTOHSCROLL
+    CONTROL         "Slide Path Radius:",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,45,115,73,10
+    LTEXT           "Slide Path Minimum Radius:",IDC_SLIDERADIUSMINPROMPT,62,127,91,8
+    LTEXT           "Static",IDC_SLIDRADIUSMINVALUE,161,128,33,8
+    LTEXT           "Fastened to Link",IDC_FASTENEDTO,45,187,139,8
+    LTEXT           "Color:",IDC_STATIC,45,146,20,8
+    CONTROL         "",IDC_COLOR,"Static",SS_GRAYRECT | SS_NOTIFY,157,143,42,13
 END
 
 IDD_SELECT_IMAGE_OPTION DIALOGEX 0, 0, 249, 75
@@ -363,8 +363,8 @@ BEGIN
     EDITTEXT        IDC_EDIT1,144,83,53,12,ES_AUTOHSCROLL
     CONTROL         "",IDC_SPIN1,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,197,83,11,14
     CONTROL         "Solid",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,51,98,32,10
-    DEFPUSHBUTTON   "OK",IDOK,50,198,66,14
-    PUSHBUTTON      "Cancel",IDCANCEL,133,198,65,14
+    DEFPUSHBUTTON   "OK",IDOK,50,197,66,14
+    PUSHBUTTON      "Cancel",IDCANCEL,133,197,65,14
     CONTROL         "Gear",IDC_CHECK5,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,51,147,31,10
     LTEXT           "Fastened to Link",IDC_FASTENEDTO,51,171,139,8
     LTEXT           "Color:",IDC_COLORPROMPT,52,112,20,8
@@ -377,7 +377,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "About Linkage"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,104,94,66,14
+    DEFPUSHBUTTON   "OK",IDOK,104,93,66,14
     CONTROL         IDB_BITMAP3,IDC_STATIC,"Static",SS_BITMAP,25,20,32,30
     LTEXT           "Linkage Mechanism Designer and Simulator",IDC_TITLE,80,18,172,12
     LTEXT           "Static",IDC_VERSION,80,30,164,8
@@ -413,8 +413,8 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LTEXT           "Angle:",IDC_STATIC,44,24,22,8
     EDITTEXT        IDC_EDIT1,66,22,46,12,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,27,55,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,81,55,50,14
+    DEFPUSHBUTTON   "OK",IDOK,27,56,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,81,56,50,14
 END
 
 IDD_POINT_PROPERTIES DIALOGEX 0, 0, 245, 135
@@ -428,8 +428,8 @@ BEGIN
     EDITTEXT        IDC_EDIT2,96,54,43,12,ES_AUTOHSCROLL
     LTEXT           ",",IDC_STATIC,142,56,8,8
     EDITTEXT        IDC_EDIT4,150,54,43,12,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,49,115,66,14
-    PUSHBUTTON      "Cancel",IDCANCEL,128,115,66,14
+    DEFPUSHBUTTON   "OK",IDOK,49,116,66,14
+    PUSHBUTTON      "Cancel",IDCANCEL,128,116,66,14
     CONTROL         "Draw Circle",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,51,36,52,10
     LTEXT           "Radius:",IDC_RADIUSPROMPT,121,37,25,8
     EDITTEXT        IDC_EDIT6,150,35,43,12,ES_AUTOHSCROLL
@@ -449,8 +449,8 @@ BEGIN
     EDITTEXT        IDC_EDIT1,140,55,53,12,ES_AUTOHSCROLL
     CONTROL         "",IDC_SPIN1,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,198,54,18,14
     CONTROL         "Measurement Line",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,51,38,74,10
-    DEFPUSHBUTTON   "OK",IDOK,49,126,66,14
-    PUSHBUTTON      "Cancel",IDCANCEL,128,126,66,14
+    DEFPUSHBUTTON   "OK",IDOK,49,125,66,14
+    PUSHBUTTON      "Cancel",IDCANCEL,128,125,66,14
     LTEXT           "Color:",IDC_STATIC,51,76,20,8
     LTEXT           "Fastened to Link",IDC_FASTENEDTO,51,98,139,8
     CONTROL         "",IDC_COLOR,"Static",SS_GRAYRECT | SS_NOTIFY,140,73,53,13
@@ -549,9 +549,9 @@ BEGIN
     IDD_CONNECTOR_PROPERTIES, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 236
+        RIGHTMARGIN, 237
         TOPMARGIN, 7
-        BOTTOMMARGIN, 231
+        BOTTOMMARGIN, 219
     END
 
     IDD_SELECT_IMAGE_OPTION, DIALOG
@@ -640,6 +640,36 @@ BEGIN
 END
 
 IDD_EXPORTIMAGE AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_CONNECTOR_PROPERTIES AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_ABOUT AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_POINT_PROPERTIES AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_GEAR_RATIO_DIALOG AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_DRAWINGLINK_PROPERTIES AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_ANGLE AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
@@ -1193,6 +1223,11 @@ BEGIN
     IDS_SAMPLE_VARYSPEED    "Varying rotational speed mechanism.\nVarying Speed Mechanism"
     IDS_SAMPLE_FINGERBOX    "Finger pushing button machine.\nButton Pushing Machine"
     IDS_SAMPLE_WATT         "Watt parallel mechanism for stem engines.\nWatt Parallel Mechanism"
+END
+
+STRINGTABLE
+BEGIN
+    IDS_RIBBON_HELP         "Help"
 END
 
 #endif    // English (United States) resources
